# sweep-dreams

./: .cfignore  .env_example  .gitignore  README.md  TEST_PR.md  main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json  vercel_build.sh
.github/workflows/: deploy-workers.yml  etl_to_csv.yml  etl_to_supabase.yml  notify.yml  pr_checks.yml  release-ios.yml  release_workers.yml  supabase_migrations.yml
docs/: index.html  privacy.html
flutter_app/: .env.mk.example  .gitignore  Makefile  QUICKSTART.md  README.md  analysis_options.yaml  firebase.json  pubspec.yaml  setup.sh
flutter_app/ios/: .gitignore  Gemfile  Podfile
flutter_app/lib/: firebase_options.dart  main.dart
flutter_app/test/: widget_test.dart
flutter_app/web/: firebase-messaging-sw.js  geolocation_test.html  index.html  manifest.json
scripts/: send_notifications.py  test_push_single.py  validate_side_conventions.py
scripts/map-tester/: README.md  index.html  serve.py
src/: to_gh_artifact.py  to_supabase.py  utils.py
src/sweep_dreams/: api.py  main.py  schedules.py
supabase/: config.toml
supabase/migrations/: 20251226220002_remote_schema.sql  20251227031804_reduce_schedules_near_distance.sql  20251227031952_change_schedules_near_to_10m.sql  20251227032046_change_schedules_near_to_50m.sql  20251227034034_add_distance_to_schedules_near.sql  (+20 more)
tests/: conftest.py  factories.py  test_api.py  test_schedules.py
workers/: IMPLEMENTATION_PLAN.md  README.md  package-lock.json  package.json  tsconfig.api.json  tsconfig.json  tsconfig.notify.json  wrangler.toml
workers/src/: index.ts  (+2 more)
(+99 files in other folders)
